--- a/core-concepts.mdx
+++ b/core-concepts.mdx
@@ -12,13 +12,13 @@ Search is your main workhorse for finding products. Whether you're building an A
 - **Text Search**: Send natural language queries (e.g., "warm winter coat for hiking")
 - **Visual Search**: Find products using images - upload a photo and find similar items
 - **Multimodal Search**: Combine text and images for ultra-precise results (e.g., "blue version of this dress" + image)
-- **Filtered Search**: Narrow results by price, color, brand, and other attributes
+- **Filtered Search**: Narrow results by price, brand, gender, and availability
 
 ### Key Parameters
 - `query`: Text string for what you're looking for
 - `image_url` or `base64_image`: For visual search capabilities
-- `filters`: To narrow down results (price range, color, etc.)
-- `limit`: Control the number of results returned
+- `filters`: To narrow down results
+- `limit`: Control the number of results returned (up to 100)
 
 ## 2. Product Detail
 
