--- a/index.mdx
+++ b/index.mdx
@@ -32,9 +32,9 @@ Setting up with Channel3 is easy. Get started in just a few steps:
     <Card title="Go to API Keys in Dashboard" icon="key" href="https://trychannel3.com/dashboard/api">
       Generate a new API key, and keep it safe.
     </Card>
-    <Callout type="important">
-      **Treat your API key like a password!** Don't share it publicly or embed it directly in frontend code that users can see. For browser-based apps, consider a backend proxy. For server-side apps, use environment variables.
-    </Callout>
+    <Warning>
+      Don't share this API key publicly or embed it directly in frontend code that users can see.
+    </Warning>
   </Step>
   <Step title="Consider Your Use-Case">
     <CardGroup cols={2}>
@@ -52,11 +52,10 @@ Setting up with Channel3 is easy. Get started in just a few steps:
 
 Ready to start building? Choose your path based on what you're creating.
 
-<Callout type="tip" title="Explore the Docs!">
+<Note>
 This introduction is just the beginning. Make sure to check out:
 - The SDK quickstart guides for practical examples.
 - The API reference for in-depth details on each endpoint and data model.
-- Other sections in "Essentials" for tips on using Mintlify features in these docs.
-</Callout>
+</Note>
 
-We're thrilled to have you on board and can't wait to see the incredible shopping experiences you'll build with Channel3! If you have questions, don't hesitate to reach out to our support. Happy coding!
+We're excited to see what you build. For help, reach out to us at [founders@trychannel3.com](mailto:founders@trychannel3.com).
